--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         randomSquareNode2.replaceChildren();
         randomSquareNode2.appendChild(randomPieceNode1);
 
-        // Change the color's of the squares
+        // Change the colors of the squares
         randomSquareNode1.style.backgroundColor = '#ffea93';
         randomSquareNode2.style.backgroundColor = '#ffea93';
 
